# RTSP_STREAMING_GStreamer

./: CMakeLists.txt  README.md
RTSP_SIMPLE_CLIENT/: CMakeLists.txt
RTSP_SIMPLE_CLIENT/src/: Client.c  Client.h  main.c
RTSP_SIMPLE_SERVER/: CMakeLists.txt
RTSP_SIMPLE_SERVER/src/: Server.c  Server.h  main.c
